chap-13/egress-serviceentry-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  generation: 1
  name: egress-service-entry
  namespace: "default"
  resourceVersion: ""
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/serviceentries/egress-service-entry
  uid: ""
spec:
  endpoints:
  - address: # <external IP address here>
  hosts:
  - svc.cluster-b.remote
  location: MESH_EXTERNAL
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
