chap-13/egress-serviceentry-b.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  generation: 1
  name: egress-service-entry
  namespace: "default"
  resourceVersion: ""
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/serviceentries/egress-service-entry
  uid: ""
spec:
  endpoints:
  - address: a6491f5c5b25011e8a5b702e39755299-1119496581.us-east-2.elb.amazonaws.com
  hosts:
  - svc.cluster-a.remote
  location: MESH_EXTERNAL
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
